fixed the editor menu lenght,use scroll to show the overflow(pc need implement addtional)

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -5,12 +5,12 @@
 
 .detail h1 {
 	color: #2bbc8a;
-	margin-top: 48px;
+	margin-top: 35px;
 	margin-bottom: 16px;
 	font-size:1.3em;
 }
 .detail h2 {
-	margin-top: 32px;
+	margin-top: 25px;
 	margin-bottom: 8px;
 	color: #eee;
 	font-size: 1rem;
